[build-system]
requires = [
    "hatchling>=0.11.2",
]
build-backend = "hatchling.build"

[project]
name = "datadog-glusterfs"
description = "The GlusterFS check"
readme = "README.md"
license = "BSD-3-Clause"
keywords = [
    "datadog",
    "datadog agent",
    "datadog check",
    "glusterfs",
]
authors = [
    { name = "Datadog", email = "packages@datadoghq.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
    "Private :: Do Not Upload",
]
dependencies = [
    "datadog-checks-base>=37.0.0",
]
dynamic = [
    "version",
]

[project.optional-dependencies]
deps = [
    "gstatus @ git+https://github.com/DataDog/gstatus.git@591f657a048ccc9f11c8940f750adbcd1d7dc8a0",
]

[project.urls]
Source = "https://github.com/DataDog/integrations-core"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path = "datadog_checks/glusterfs/__about__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/datadog_checks",
    "/tests",
    "/manifest.json",
]

[tool.hatch.build.targets.wheel]
include = [
    "/datadog_checks/glusterfs",
]
dev-mode-dirs = [
    ".",
]
