[build-system]
requires = [
    "hatchling>=0.11.2",
]
build-backend = "hatchling.build"

[project]
name = "datadog-ibm-mq"
description = "The IBM MQ check"
readme = "README.md"
keywords = [
    "datadog",
    "datadog agent",
    "datadog check",
    "ibm_mq",
]
authors = [
    { name = "Datadog", email = "packages@datadoghq.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.11",
    "Topic :: System :: Monitoring",
    "Private :: Do Not Upload",
]
dependencies = [
    "datadog-checks-base>=32.6.0",
]
dynamic = [
    "version",
]
license = "BSD-3-Clause"
requires-python = ">=3.9"

[project.optional-dependencies]
deps = [
    "psutil==5.9.0",
    "pymqi==1.12.10; sys_platform != 'darwin' or platform_machine != 'arm64'",
]

[project.urls]
Source = "https://github.com/DataDog/integrations-core"

[tool.hatch.version]
path = "datadog_checks/ibm_mq/__about__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/datadog_checks",
    "/tests",
    "/manifest.json",
]

[tool.hatch.build.targets.wheel]
include = [
    "/datadog_checks/ibm_mq",
]
dev-mode-dirs = [
    ".",
]
