[build-system]
requires = [
    "hatchling>=0.11.2",
]
build-backend = "hatchling.build"

[project]
name = "datadog-kafka-consumer"
description = "The Kafka Consumer check"
readme = "README.md"
keywords = [
    "datadog",
    "datadog agent",
    "datadog check",
    "kafka_consumer",
]
authors = [
    { name = "Datadog", email = "packages@datadoghq.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Monitoring",
    "Private :: Do Not Upload",
]
dependencies = [
    "datadog-checks-base>=37.24.0",
]
dynamic = [
    "version",
]
license = "BSD-3-Clause"

[project.optional-dependencies]
deps = [
    "aws-msk-iam-sasl-signer-python==1.0.2",
    "boto3==1.40.21",
    "confluent-kafka==2.13.0",
    "fastavro==1.12.0",
    "protobuf==6.32.0",
]

[project.urls]
Source = "https://github.com/DataDog/integrations-core"

[tool.hatch.version]
path = "datadog_checks/kafka_consumer/__about__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/datadog_checks",
    "/tests",
    "/manifest.json",
]

[tool.hatch.build.targets.wheel]
include = [
    "/datadog_checks/kafka_consumer",
]
dev-mode-dirs = [
    ".",
]

[tool.ruff]
extend = "../pyproject.toml"
