[build-system]
requires = ["hatchling>=0.11.2"]
build-backend = "hatchling.build"

[project]
name = "datadog-lparstats"
description = "The LPARStats check"
readme = "README.md"
keywords = [
    "datadog",
    "datadog agent",
    "datadog check",
    "lparstats",
    "aix",
    "lpar",
    "ibm power",
]
authors = [{ name = "Datadog", email = "packages@datadoghq.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Monitoring",
    "Private :: Do Not Upload",
]
dependencies = ["datadog-checks-base"]
dynamic = ["version"]
license = "BSD-3-Clause"

[project.optional-dependencies]
deps = []

[project.urls]
Source = "https://github.com/DataDog/integrations-core"

[tool.hatch.version]
path = "datadog_checks/lparstats/__about__.py"

[tool.hatch.build.targets.sdist]
include = ["/datadog_checks", "/tests", "/manifest.json"]

[tool.hatch.build.targets.wheel]
include = ["/datadog_checks/lparstats"]
dev-mode-dirs = ["."]
